1.2.1:
    -Forked from base

1.3.0:
    -Made commands admin-only instead of owner-only