@@ -28,19 +28,21 @@ public class DiscordBot {
   public static final DiscordBotSettings BOTSETTINGS = new DiscordBotSettings();
   private JDA jda;
   private Logger logger;
+  private String serverName;
 
   /**
    *
    * @param token
    * @param logger
    */
-  public DiscordBot(String token, Logger logger) {
+  public DiscordBot(String serverName, String token, Logger logger) {
     try {
       this.logger = logger;
       COMMANDHANDLER.registerCommands(new Set(), new Ping(), new Version());
       this.jda = JDABuilder.createDefault(token).addEventListeners(new MessageHandler(COMMANDHANDLER)).build();
       this.jda.awaitReady();
-      sendMessageToChannel("Server online");
+      this.serverName = serverName;
+      sendMessageToChannel(this.serverName + ": online");
     } catch (LoginException e) {
       this.logger.severe("Logging to the Discord was not successful. Please check, is the token valid.");
     } catch (InterruptedException e) {
@@ -111,7 +113,7 @@ public class DiscordBot {
   }
 
   public void shutConnection() {
-    sendMessageToChannelAndWait("Server offline");
+    sendMessageToChannelAndWait(this.serverName + ": offline");
     this.jda.shutdownNow();
   }
 
